Update Scramble version constraint 0.12.x and add PHP 8.4 test matrix

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,8 @@ jobs:
             laravel: 11.*
           - php: 8.3
             laravel: 11.*
+          - php: 8.4
+            laravel: 11.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }}
 
