--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "dedoc/scramble": "^0.11",
-        "laravel/framework": "^10.0|^11.0"
+        "dedoc/scramble": "^0.11|^0.12"
     },
     "require-dev": {
         "laravel/pint": "^1.20",
