--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,11 +16,19 @@ jobs:
           - php: 8.1
             laravel: 10.*
           - php: 8.2
+            laravel: 10.*
+          - php: 8.2
             laravel: 11.*
           - php: 8.3
             laravel: 11.*
           - php: 8.4
             laravel: 11.*
+          - php: 8.2
+            laravel: 12.*
+          - php: 8.3
+            laravel: 12.*
+          - php: 8.4
+            laravel: 12.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }}
 
