--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     },
     "require-dev": {
         "laravel/pint": "^1.20",
-        "orchestra/testbench": "^8.0|^9.0",
-        "pestphp/pest-plugin-laravel": "^2.2"
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "pestphp/pest-plugin-laravel": "^2.4|^3.0"
     },
     "autoload": {
         "psr-4": {
