--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "dedoc/scramble": "^0.11|^0.12"
+        "dedoc/scramble": "^0.11|^0.12|^0.13"
     },
     "require-dev": {
         "laravel/pint": "^1.20",
